fix(maximize player): elements under player were overlapped by the player

--- a/src/features/maximizePlayerButton/index.css
+++ b/src/features/maximizePlayerButton/index.css
@@ -1,9 +1,8 @@
 .yte-maximized-video {
 	width: 100vw !important;
-	height: auto !important;
+	height: var(--yte-video-height) !important;
 	left: 0 !important;
 	top: 0 !important;
-	max-height: 100vh !important;
 	object-fit: contain !important;
 	background: black !important;
 }
@@ -22,16 +21,23 @@
 	width: calc(99vw - 13px) !important;
 }
 
+body[yte-maximized] #full-bleed-container {
+	margin-top: calc(-1 * var(--yte-header-height)) !important;
+	height: var(--yte-video-height) !important;
+}
+
 body[yte-maximized] #columns {
 	margin-top: var(--yte-columns-offset) !important;
 	transition: margin-top 0.1s ease;
 }
+
 body[yte-maximized] #masthead-container {
 	transform: translateY(-100%);
 	transition: transform 0.3s ease;
 	position: fixed;
 	z-index: 3000;
 }
+
 body[yte-maximized] #masthead-container.yte-header-visible {
 	transform: translateY(0);
 }
